Ticket #28077: Style changes to the tree component. * Deleted the NBSP between the icon and the label. * Added margin to create space between the icon and the label in the old theme. * Core Theme: The tree icon has been aligned so that it is in the middle, like the other parts of a tree node. It was also ensured that the correct colors were selected for each state. * Core Theme: Decreased spacing which is not needed anymore since there is no NBSP anymore.

--- a/com.top_logic/src/main/webapp/style/template.css
+++ b/com.top_logic/src/main/webapp/style/template.css
@@ -3830,6 +3830,10 @@ a.topSpacerRightText {	color:var(--INVERT_TEXT);
 	line-height: var(--TREE_NODE_LINE_HEIGHT);
 }
 
+.treeNodeIcon {
+	margin-right: 5px;
+}
+
 .treeBody .treeNode.tblFrozen {
 	line-height: normal;
 }
